tests/snapshots/snapshots__list_payment_method.snap
---
source: tests/snapshots.rs
expression: "render::list_table(r.resource, &[object_for(r)])"
---
ID                                    TYPE          PAN/ACCT              EXP      DEFAULT
------------------------------------------------------------------------------------------
6e22f0f3-f3ed-407c-a46f-ec9cffde5d5b  Card          ************1111      12/2033  yes
