tests/snapshots/snapshots__list_payment_session.snap
---
source: tests/snapshots.rs
expression: "render::list_table(r.resource, &[object_for(r)])"
---
ID                                    STATUS        MODE            
--------------------------------------------------------------------
—                                     Created       Payment
