tests/snapshots/snapshots__list_terminal.snap
---
source: tests/snapshots.rs
expression: "render::list_table(r.resource, &[object_for(r)])"
---
ID                                    SERIAL            MODEL                 MODE                  CONNECTION    LAST SEEN               
------------------------------------------------------------------------------------------------------------------------------------------
b1d4c0a7-3e18-4a6f-8c25-9f7e6d5b4a31  SN100001          SunmiP2               SemiIntegrated        Online        2026-08-11T18:44:45.638Z
