tests/snapshots/snapshots__list_transaction.snap
---
source: tests/snapshots.rs
expression: "render::list_table(r.resource, &[object_for(r)])"
---
ID                                    DATE        STATUS        TYPE            AMOUNT      CUSTOMER                            
--------------------------------------------------------------------------------------------------------------------------------
90d084d6-55b8-4fb8-b658-861534d07f9a  2026-05-29  Captured      Sale            10.50       588f57a5-fe6a-4844-851e-e98914e81980
