tests/snapshots/snapshots__list_transaction_autofill.snap
---
source: tests/snapshots.rs
expression: "render::list_table(r.resource, &[object_for(r)])"
---
TAX RATE  
----------
8.5
