tests/snapshots/snapshots__list_transaction_created.snap
---
source: tests/snapshots.rs
expression: "render::list_table(r.resource, &[object_for(r)])"
---
ID                                    DATE        STATUS        TYPE            AMOUNT      CUSTOMER                            
--------------------------------------------------------------------------------------------------------------------------------
90d084d6-55b8-4fb8-b658-861534d07f9a  —           Captured      —               10.50       —
