tests/snapshots/snapshots__payment-links.snap
---
source: tests/snapshots.rs
expression: help_for(&args)
---
Payment link operations (create, get, list, update, delete, share)

Usage: flute2 payment-links [OPTIONS] <COMMAND>

Commands:
  create  Create a new payment link (POST /v2/payment-links)
  get     Fetch a single payment link by ID (GET /v2/payment-links/{paymentLinkId})
  list    List payment links (GET /v2/payment-links)
  update  Update a payment link (PATCH /v2/payment-links/{paymentLinkId})
  delete  Delete a payment link (DELETE /v2/payment-links/{paymentLinkId})
  share   Send a payment link to a customer by email or text message (POST /v2/payment-links/{paymentLinkId}/share)
  help    Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help

Global options:
      --profile <PROFILE>  Active profile (environment). `sandbox` (default) or `production`/`prod` [env: FLUTE2_PROFILE=]
      --output <OUTPUT>    Output format: table (default), json, or quiet (id only). When omitted, falls back to the `FLUTE2_OUTPUT` env var, then to the `output` key in ~/.flute2/config.toml, then to `table` [env: FLUTE2_OUTPUT=] [possible values: table, json, quiet]
      --debug              Print HTTP request/response traces to stderr. Card and bank-account numbers are masked to the last 4 digits; CVV/security codes are removed
